[package]
name = "decap_oauth"
version = "0.0.1"
edition = "2021"
authors = ["Augusto Gunsch <augusto@augustogunsch>"]
license = "MIT"
repository = "https://github.com/augustogunsch/oauth_decap_github"
description = """
OAuth server for Decap CMS for GitHub.
"""

[dependencies]
axum = "0.7"
oauth2 = "4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
