[package]
name = "decap_oauth"
version = "0.0.2"
edition = "2021"
authors = ["Augusto Gunsch <augusto@augustogunsch>"]
license = "MIT"
repository = "https://github.com/augustogunsch/decap_oauth"
description = """
OAuth server for Decap CMS for GitHub.
"""

[dependencies]
axum = "0.7"
oauth2 = "4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
