[package]
name = "oauth_decap_github_lib"
version = "0.0.5"
edition = "2021"
authors = ["Augusto Gunsch <augusto@augustogunsch>"]
license = "MIT"
repository = "https://github.com/augustogunsch/oauth_decap_github"
description = """
OAuth server for Decap CMS for GitHub.
"""

[dependencies]
axum = "0.7"
oauth2 = "4"
reqwest = "0.11"
